--- a/.github/workflows/ai-agent-advanced.yml
+++ b/.github/workflows/ai-agent-advanced.yml
@@ -44,7 +44,8 @@ jobs:
           echo "REPO_STRUCTURE<<EOF" >> $GITHUB_OUTPUT
           find . -type f -name "*.tsx" -o -name "*.ts" -o -name "*.js" -o -name "*.jsx" | head -20 >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
-            - name: Parse Issue and Generate Implementation Plan
+          
+      - name: Parse Issue and Generate Implementation Plan
         id: ai-planning
         uses: actions/github-script@v7
         with:
@@ -64,7 +65,7 @@ jobs:
               task: taskDescription,
               requirements: requirements.split('\n').filter(r => r.trim()),
               targetFiles: files.split('\n').filter(f => f.trim()),
-              context: additionalContext,
+              additionalContext: additionalContext,
               issueNumber: issueData.number,
               title: issueTitle
             };
@@ -98,7 +99,7 @@ jobs:
           
           **Issue:** #${{ github.event.issue.number }}
           **Title:** ${{ github.event.issue.title }}
-          **Branch:** ${process.env.BRANCH_NAME}
+          **Branch:** ${{ env.BRANCH_NAME }}
           **Timestamp:** $(date -u)
           
           ## Analysis
@@ -143,8 +144,9 @@ jobs:
           - Ready for review
 
           Closes #${{ github.event.issue.number }}"
+          
       - name: Push Implementation
-        run: git push origin "${BRANCH_NAME}"
+        run: git push origin "${{ env.BRANCH_NAME }}"
           
       - name: Create Pull Request with AI Analysis
         uses: actions/github-script@v7
@@ -180,7 +182,7 @@ jobs:
               - [ ] Code review passed
 
               ### 📖 Additional Context
-              ${plan.context || 'No additional context provided'}
+              ${plan.additionalContext || 'No additional context provided'}
 
               ### 🔍 AI Analysis
               - ✅ Issue requirements analyzed
