Fix GitHub Pages deployment: Remove basePath for custom domain
- Update next.config.ts to only use basePath when not using custom domain
- Add GITHUB_PAGES_CUSTOM_DOMAIN environment variable support
- Update deploy-pages.yml workflow to create CNAME file for danielsbonnin.com
- Fix issue where site was trying to load from /dsbdotcom/ subpath instead of root domain

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -48,9 +48,13 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+          GITHUB_PAGES_CUSTOM_DOMAIN: true
         
       - name: Add nojekyll file
         run: touch ./out/.nojekyll
+        
+      - name: Add CNAME for custom domain
+        run: echo "danielsbonnin.com" > ./out/CNAME
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
