Fix GitHub Actions workflow: Ensure out directory exists before creating .nojekyll
- Add mkdir -p ./out before touch command to prevent 'No such file or directory' error
- Fix YAML formatting issues in deploy-pages.yml workflow
- Use multi-line run command with proper shell syntax

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -50,7 +50,9 @@ jobs:
           NODE_ENV: production
         
       - name: Add nojekyll file
-        run: touch ./out/.nojekyll
+        run: |
+          mkdir -p ./out
+          touch ./out/.nojekyll
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
