--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -48,11 +48,25 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+          GITHUB_ACTIONS: true
         
       - name: Add nojekyll file
         run: |
           mkdir -p ./out
           touch ./out/.nojekyll
+          
+      - name: Verify build output
+        run: |
+          echo "Contents of ./out directory:"
+          ls -la ./out/
+          echo "Checking for index.html:"
+          if [ -f "./out/index.html" ]; then
+            echo "✅ index.html found"
+            head -n 5 ./out/index.html
+          else
+            echo "❌ index.html not found"
+            exit 1
+          fi
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
